--- a/.github/workflows/auto-reading.yml
+++ b/.github/workflows/auto-reading.yml
@@ -1,10 +1,10 @@
 name: Auto Reading Bot
 
 on:
-  # 定时触发 - 每天早上8点和晚上8点执行
-  # schedule:
-  #   - cron: '0 0 * * *'    # UTC 00:00 = 北京时间 08:00
-  #   - cron: '0 12 * * *'   # UTC 12:00 = 北京时间 20:00
+  # 定时触发 - 每天早上8点和晚上8点执行（北京时间）
+  schedule:
+    - cron: '0 0 * * *'    # UTC 00:00 = 北京时间 08:00
+    - cron: '0 12 * * *'   # UTC 12:00 = 北京时间 20:00
   
   # 拉取请求触发，用于测试阅读
   pull_request:
@@ -20,7 +20,7 @@ on:
       target_duration:
         description: '阅读时长（分钟，格式：10-20。建议：频繁运行时设置5-10分钟，GitHub免费版每月2000分钟额度）'
         required: false
-        default: '1-2'
+        default: '30-60'  # 修改默认手动触发时长
         type: string
       reading_mode:
         description: '阅读模式'
@@ -40,7 +40,7 @@ on:
 jobs:
   auto-reading:
     runs-on: ubuntu-latest
-    timeout-minutes: 120  # 2小时超时
+    timeout-minutes: 120  # 2小时超时，确保能覆盖最长60分钟阅读
     
     steps:
     - name: Checkout code
@@ -65,8 +65,8 @@ jobs:
 
         reading:
           mode: "${{ github.event.inputs.reading_mode || 'smart_random' }}"
-          # 目标阅读时长（分钟），支持区间随机，格式如："1" 或 "1-2"，当前为：1分钟
-          target_duration: "${{ github.event.inputs.target_duration || '1' }}"
+          # 目标阅读时长（分钟），支持区间随机，定时任务将使用30-60分钟
+          target_duration: "${{ github.event.inputs.target_duration || '30-60' }}"  # 修改默认时长
           reading_interval: "30-48"
           use_curl_data_first: true
           fallback_to_config: true
@@ -106,7 +106,7 @@ jobs:
 
     - name: Run WeRead Bot
       env:
-        # Cookie刷新QL属性，根据不同用户的环境，可能需要设置为True或False来确保cookie刷新正常工作，默认值为false
+        # Cookie刷新QL属性
         HACK_COOKIE_REFRESH_QL: ${{ secrets.HACK_COOKIE_REFRESH_QL }}
         # 通知相关环境变量
         WEREAD_CURL_STRING: ${{ secrets.WEREAD_CURL_STRING }}
@@ -146,7 +146,7 @@ jobs:
         echo "开始自动阅读任务..."
         echo "当前时间: $(date)"
         echo "运行参数:"
-        echo "- 阅读时长: ${{ github.event.inputs.target_duration || '45-90' }}"
+        echo "- 阅读时长: ${{ github.event.inputs.target_duration || '30-60' }}"  # 修改显示的默认时长
         echo "- 阅读模式: ${{ github.event.inputs.reading_mode || 'smart_random' }}"
         echo "- 启用通知: ${{ github.event.inputs.notify_enabled || true }}"
         echo "================================"
